--- a/client/angular.json
+++ b/client/angular.json
@@ -5,12 +5,7 @@
   "projects": {
     "classdesigner": {
       "projectType": "application",
-      "schematics": {
-        "@schematics/angular:component": {
-          "style": "scss",
-          "standalone": false
-        }
-      },
+      "schematics": {},
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
