--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
+    "@ng-icons/bootstrap-icons": "^27.2.0",
+    "@ng-icons/core": "^27.2.0",
     "guid-typescript": "^1.0.9",
     "moment": "^2.30.1",
     "rxjs": "~7.8.0",
