--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
+    "@auth0/angular-jwt": "^5.2.0",
     "@ng-icons/bootstrap-icons": "^27.2.0",
     "@ng-icons/core": "^27.2.0",
     "guid-typescript": "^1.0.9",
