--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "guid": "^0.0.12",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.9.1"
+    "mysql2": "^3.9.1",
+    "nodemon": "^3.1.0"
   }
 }
